[package]
name = "bevy_mod_debug_console"
categories = ["game-engines"]
description = "Bevy plugin to use console to get information from ECS"
keywords = ["game", "tool", "bevy", "debug"]
license = "MIT OR MIT-0 OR Apache-2.0"
authors = ["Mike Hsu <mike.hsu@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.0.1"
homepage = "https://github.com/hymm/bevy_mod_debug_console"
repository = "https://github.com/hymm/bevy_mod_debug_console"
documentation = "https://docs.rs/bevy_mod_debug_console"

[dependencies]
bevy = {version = "0.5", default-features = false}
clap = "3.0.0-beta.2"

[dev-dependencies]
bevy = "0.5"
bevy_console = "0.2.0"

[[example]]
name="example"
path="examples/example.rs"